// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clock component renders the clock correctly renders correctly 1`] = `
<div
  className="clock"
>
  <span
    className="clock-text"
  >
    01:04
  </span>
</div>
`;

exports[`Clock component renders the clock correctly renders correctly with less than 10 seconds on the clock 1`] = `
<div
  className="clock"
>
  <span
    className="clock-text"
  >
    00:00
  </span>
</div>
`;
